--- a/src/main/resources/com/example/trafficsimulator/View/main-view.fxml
+++ b/src/main/resources/com/example/trafficsimulator/View/main-view.fxml
@@ -200,9 +200,32 @@
       <ScrollBar layoutX="679.0" layoutY="174.0" orientation="VERTICAL" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <Accordion layoutX="486.0" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="0.0">
         <panes>
-          <TitledPane animated="false" text="Selected">
+          <TitledPane fx:id="selectedAccordion" animated="false" text="Selected">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="230.0" />
+                  <GridPane>
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints maxHeight="230.0" minHeight="230.0" prefHeight="230.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="60.0" minHeight="60.0" prefHeight="60.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="60.0" minHeight="60.0" prefHeight="60.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="1000.0" minHeight="0.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                    <AnchorPane fx:id="selectedAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="230.0" />
+                        <Button fx:id="disconnectBtn" mnemonicParsing="false" onAction="#disconnectSelected" prefHeight="25.0" prefWidth="210.0" styleClass="button-style-2" text="Disconnect Road" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets left="10.0" right="10.0" />
+                           </GridPane.margin>
+                        </Button>
+                        <Button fx:id="deleteBtn" mnemonicParsing="false" onAction="#deleteSelected" prefHeight="25.0" prefWidth="210.0" styleClass="button-style" text="Delete Road" GridPane.rowIndex="2">
+                           <GridPane.margin>
+                              <Insets left="10.0" right="10.0" />
+                           </GridPane.margin>
+                        </Button>
+                     </children>
+                  </GridPane>
             </content>
           </TitledPane>
         </panes>
