--- a/src/main/resources/com/example/trafficsimulator/View/main-view.fxml
+++ b/src/main/resources/com/example/trafficsimulator/View/main-view.fxml
@@ -23,7 +23,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="400.0" minWidth="700.0" prefWidth="600.0" style="-fx-background-color: #666666;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.trafficsimulator.Controller.MainController">
+<AnchorPane fx:id="anchorPane" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="400.0" minWidth="700.0" prefHeight="491.0" prefWidth="700.0" style="-fx-background-color: #666666;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.trafficsimulator.Controller.MainController">
    <children>
       <Accordion fx:id="accordion" maxWidth="250.0" prefHeight="400.0" prefWidth="250.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
         <panes>
@@ -68,7 +68,7 @@
                                                 <Insets bottom="5.0" />
                                              </GridPane.margin>
                                           </Hyperlink>
-                                          <Button fx:id="simulateBtn" mnemonicParsing="false" onAction="#beginSimulate" prefHeight="25.0" prefWidth="255.0" styleClass="button-style-2" text="Simulate" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+                                          <Button fx:id="simulateBtn" mnemonicParsing="false" onAction="#toggleSimulate" prefHeight="25.0" prefWidth="255.0" styleClass="button-style-2" text="Begin Simulation" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" GridPane.valignment="CENTER">
                                              <GridPane.margin>
                                                 <Insets left="10.0" right="10.0" />
                                              </GridPane.margin>
@@ -125,6 +125,21 @@
                                              <padding>
                                                 <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                                              </padding>
+                                          </Pane>
+                                          <Pane maxHeight="80.0" maxWidth="80.0" minHeight="80.0" minWidth="80.0" prefHeight="80.0" prefWidth="80.0" styleClass="image-style">
+                                             <children>
+                                                <ImageView fx:id="templateImg4" fitHeight="64.0" fitWidth="64.0" layoutX="8.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@../Images/trafficLight.png" />
+                                                   </image>
+                                                </ImageView>
+                                             </children>
+                                             <padding>
+                                                <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                                             </padding>
+                                             <FlowPane.margin>
+                                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                             </FlowPane.margin>
                                           </Pane>
                                        </children>
                                        <padding>
@@ -207,19 +222,19 @@
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
                      </columnConstraints>
                      <rowConstraints>
-                        <RowConstraints maxHeight="230.0" minHeight="230.0" prefHeight="230.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="250.0" minHeight="250.0" prefHeight="250.0" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="60.0" minHeight="60.0" prefHeight="60.0" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="60.0" minHeight="60.0" prefHeight="60.0" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="1000.0" minHeight="0.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                    <AnchorPane fx:id="selectedAnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="230.0" />
-                        <Button mnemonicParsing="false" onAction="#disconnectSelected" prefHeight="25.0" prefWidth="210.0" styleClass="button-style-2" text="Disconnect Road" GridPane.rowIndex="1">
+                    <AnchorPane fx:id="selectedAnchorPane" maxHeight="250.0" minHeight="250.0" minWidth="0.0" prefHeight="250.0" prefWidth="230.0" />
+                        <Button fx:id="disconnectRoadBtn" mnemonicParsing="false" onAction="#disconnectSelected" prefHeight="25.0" prefWidth="210.0" styleClass="button-style-2" text="Disconnect Road" GridPane.rowIndex="1">
                            <GridPane.margin>
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#deleteSelected" prefHeight="25.0" prefWidth="210.0" styleClass="button-style" text="Delete Road" GridPane.rowIndex="2">
+                        <Button fx:id="deleteRoadBtn" mnemonicParsing="false" onAction="#deleteSelected" prefHeight="25.0" prefWidth="210.0" styleClass="button-style" text="Delete Road" GridPane.rowIndex="2">
                            <GridPane.margin>
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
