--- a/src/main/resources/com/example/trafficsimulator/View/main-view.fxml
+++ b/src/main/resources/com/example/trafficsimulator/View/main-view.fxml
@@ -8,7 +8,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollBar?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
@@ -217,30 +219,102 @@
         <panes>
           <TitledPane fx:id="selectedAccordion" animated="false" text="Selected">
             <content>
-                  <GridPane>
-                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints maxHeight="250.0" minHeight="250.0" prefHeight="250.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="60.0" minHeight="60.0" prefHeight="60.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="60.0" minHeight="60.0" prefHeight="60.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="1000.0" minHeight="0.0" vgrow="SOMETIMES" />
-                     </rowConstraints>
+                  <StackPane>
                      <children>
-                    <AnchorPane fx:id="selectedAnchorPane" maxHeight="250.0" minHeight="250.0" minWidth="0.0" prefHeight="250.0" prefWidth="230.0" />
-                        <Button fx:id="disconnectRoadBtn" mnemonicParsing="false" onAction="#disconnectSelected" prefHeight="25.0" prefWidth="210.0" styleClass="button-style-2" text="Disconnect Road" GridPane.rowIndex="1">
-                           <GridPane.margin>
-                              <Insets left="10.0" right="10.0" />
-                           </GridPane.margin>
-                        </Button>
-                        <Button fx:id="deleteRoadBtn" mnemonicParsing="false" onAction="#deleteSelected" prefHeight="25.0" prefWidth="210.0" styleClass="button-style" text="Delete Road" GridPane.rowIndex="2">
-                           <GridPane.margin>
-                              <Insets left="10.0" right="10.0" />
-                           </GridPane.margin>
-                        </Button>
+                        <TabPane>
+                           <tabs>
+                              <Tab closable="false" styleClass="tab-style" text="Overview">
+                                 <content>
+                                    <GridPane>
+                                       <columnConstraints>
+                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                                       </columnConstraints>
+                                       <rowConstraints>
+                                          <RowConstraints maxHeight="250.0" minHeight="250.0" prefHeight="250.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="60.0" minHeight="60.0" prefHeight="60.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="60.0" minHeight="60.0" prefHeight="60.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="1000.0" minHeight="0.0" vgrow="SOMETIMES" />
+                                       </rowConstraints>
+                                       <children>
+                                      <AnchorPane fx:id="selectedAnchorPane" maxHeight="250.0" minHeight="250.0" minWidth="0.0" prefHeight="230.0" prefWidth="210.0" />
+                                          <Button fx:id="disconnectRoadBtn" mnemonicParsing="false" onAction="#disconnectSelected" prefHeight="25.0" prefWidth="210.0" styleClass="button-style-2" text="Disconnect Road" GridPane.rowIndex="1">
+                                             <GridPane.margin>
+                                                <Insets left="10.0" right="10.0" />
+                                             </GridPane.margin>
+                                          </Button>
+                                          <Button fx:id="deleteRoadBtn" mnemonicParsing="false" onAction="#deleteSelected" prefHeight="25.0" prefWidth="210.0" styleClass="button-style" text="Delete Road" GridPane.rowIndex="2">
+                                             <GridPane.margin>
+                                                <Insets left="10.0" right="10.0" />
+                                             </GridPane.margin>
+                                          </Button>
+                                       </children>
+                                    </GridPane>
+                                 </content>
+                              </Tab>
+                              <Tab closable="false" styleClass="tab-style" text="Specifics">
+                                 <content>
+                                    <GridPane>
+                                       <columnConstraints>
+                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                                       </columnConstraints>
+                                       <rowConstraints>
+                                          <RowConstraints maxHeight="250.0" minHeight="250.0" prefHeight="250.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="60.0" minHeight="60.0" prefHeight="60.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="60.0" minHeight="60.0" prefHeight="60.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="1000.0" minHeight="0.0" vgrow="SOMETIMES" />
+                                       </rowConstraints>
+                                    </GridPane>
+                                 </content>
+                                 <content>
+                                    <GridPane>
+                                      <columnConstraints>
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                      </columnConstraints>
+                                      <rowConstraints>
+                                          <RowConstraints minHeight="0.0" prefHeight="10.0" vgrow="ALWAYS" />
+                                          <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="0.0" prefHeight="0.0" vgrow="ALWAYS" />
+                                      </rowConstraints>
+                                       <children>
+                                          <Slider fx:id="settingS1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP">
+                                             <GridPane.margin>
+                                                <Insets left="10.0" right="10.0" />
+                                             </GridPane.margin>
+                                          </Slider>
+                                          <Label fx:id="settingL1" text="Setting" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" />
+                                          <Label fx:id="settingL2" text="Setting" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="BOTTOM" />
+                                          <Slider fx:id="settingS2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="TOP">
+                                             <GridPane.margin>
+                                                <Insets left="10.0" right="10.0" />
+                                             </GridPane.margin>
+                                          </Slider>
+                                          <Label fx:id="settingL3" text="Setting" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="BOTTOM" />
+                                          <Label fx:id="settingL4" text="Setting" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="BOTTOM" />
+                                          <Slider fx:id="settingS3" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="TOP">
+                                             <GridPane.margin>
+                                                <Insets left="10.0" right="10.0" />
+                                             </GridPane.margin>
+                                          </Slider>
+                                          <Slider fx:id="settingS4" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="TOP">
+                                             <GridPane.margin>
+                                                <Insets left="10.0" right="10.0" />
+                                             </GridPane.margin>
+                                          </Slider>
+                                       </children>
+                                    </GridPane>
+                                 </content>
+                              </Tab>
+                           </tabs>
+                        </TabPane>
                      </children>
-                  </GridPane>
+                  </StackPane>
             </content>
           </TitledPane>
         </panes>
