--- a/src/main/resources/com/example/trafficsimulator/View/main-view.fxml
+++ b/src/main/resources/com/example/trafficsimulator/View/main-view.fxml
@@ -27,9 +27,9 @@
 
 <AnchorPane fx:id="anchorPane" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="400.0" minWidth="700.0" prefHeight="491.0" prefWidth="700.0" style="-fx-background-color: #666666;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.trafficsimulator.Controller.MainController">
    <children>
-      <Accordion fx:id="accordion" maxWidth="250.0" prefHeight="400.0" prefWidth="250.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <Accordion fx:id="menuAccordion" maxWidth="250.0" prefHeight="400.0" prefWidth="250.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
         <panes>
-          <TitledPane text="Menu">
+          <TitledPane fx:id="menuTP" animated="false" text="Menu">
             <content>
                   <StackPane maxWidth="250.0" prefWidth="250.0">
                      <children>
@@ -50,17 +50,17 @@
                                           <RowConstraints vgrow="SOMETIMES" />
                                       </rowConstraints>
                                        <children>
-                                          <Button mnemonicParsing="false" onAction="#saveGraph" prefHeight="25.0" prefWidth="279.0" styleClass="button-style" text="Save" GridPane.rowIndex="1">
+                                          <Button fx:id="saveBtn" mnemonicParsing="false" onAction="#saveGraph" prefHeight="25.0" prefWidth="279.0" styleClass="button-style" text="Save" GridPane.rowIndex="1">
                                              <GridPane.margin>
                                                 <Insets left="10.0" right="10.0" />
                                              </GridPane.margin>
                                           </Button>
-                                          <Button mnemonicParsing="false" onAction="#loadGraph" prefHeight="25.0" prefWidth="263.0" styleClass="button-style" text="Load" GridPane.rowIndex="2">
+                                          <Button fx:id="loadBtn" mnemonicParsing="false" onAction="#loadGraph" prefHeight="25.0" prefWidth="263.0" styleClass="button-style" text="Load" GridPane.rowIndex="2">
                                              <GridPane.margin>
                                                 <Insets left="10.0" right="10.0" />
                                              </GridPane.margin>
                                           </Button>
-                                          <Button mnemonicParsing="false" onAction="#clearGraph" prefHeight="25.0" prefWidth="255.0" styleClass="button-style" text="Clear" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                                          <Button fx:id="clearBtn" mnemonicParsing="false" onAction="#clearGraph" prefHeight="25.0" prefWidth="255.0" styleClass="button-style" text="Clear" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                                              <GridPane.margin>
                                                 <Insets left="10.0" right="10.0" />
                                              </GridPane.margin>
@@ -228,11 +228,10 @@
           </TitledPane>
         </panes>
       </Accordion>
-      <ScrollBar prefHeight="15.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
       <ScrollBar layoutX="679.0" layoutY="174.0" orientation="VERTICAL" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <Accordion layoutX="486.0" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="0.0">
+      <Accordion fx:id="selectedAccordion" layoutX="486.0" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="0.0">
         <panes>
-          <TitledPane fx:id="selectedAccordion" animated="false" text="Selected">
+          <TitledPane fx:id="selectedTP" animated="false" text="Selected">
             <content>
                   <StackPane>
                      <children>
@@ -251,7 +250,10 @@
                                           <RowConstraints maxHeight="1000.0" minHeight="0.0" vgrow="SOMETIMES" />
                                        </rowConstraints>
                                        <children>
-                                      <AnchorPane fx:id="selectedAnchorPane" maxHeight="250.0" minHeight="250.0" minWidth="0.0" prefHeight="230.0" prefWidth="210.0" />
+                                      <AnchorPane fx:id="selectedAnchorPane" maxHeight="250.0" minHeight="250.0" minWidth="0.0" prefHeight="230.0" prefWidth="210.0">
+                                             <children>
+                                                <ImageView fx:id="displayImageView" fitHeight="128.0" fitWidth="128.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true" smooth="false" AnchorPane.bottomAnchor="61.0" AnchorPane.leftAnchor="51.0" AnchorPane.rightAnchor="51.0" AnchorPane.topAnchor="61.0" />
+                                             </children></AnchorPane>
                                           <Button fx:id="disconnectRoadBtn" mnemonicParsing="false" onAction="#disconnectSelected" prefHeight="25.0" prefWidth="210.0" styleClass="button-style-2" text="Disconnect Road" GridPane.rowIndex="1">
                                              <GridPane.margin>
                                                 <Insets left="10.0" right="10.0" />
