--- a/src/main/resources/com/example/trafficsimulator/View/main-view.fxml
+++ b/src/main/resources/com/example/trafficsimulator/View/main-view.fxml
@@ -8,9 +8,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollBar?>
-<?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
@@ -283,9 +281,10 @@
                                     </GridPane>
                                  </content>
                                  <content>
-                                    <GridPane>
+                                    <GridPane fx:id="settingsGridPane">
                                       <columnConstraints>
-                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="212.560546875" minWidth="10.0" prefWidth="191.77789306640625" />
+                                          <ColumnConstraints hgrow="SOMETIMES" maxWidth="110.75555419921875" minWidth="10.0" prefWidth="41.22210693359375" />
                                       </columnConstraints>
                                       <rowConstraints>
                                           <RowConstraints minHeight="0.0" prefHeight="10.0" vgrow="ALWAYS" />
@@ -299,32 +298,6 @@
                                           <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                         <RowConstraints minHeight="0.0" prefHeight="0.0" vgrow="ALWAYS" />
                                       </rowConstraints>
-                                       <children>
-                                          <Slider fx:id="settingS1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP">
-                                             <GridPane.margin>
-                                                <Insets left="10.0" right="10.0" />
-                                             </GridPane.margin>
-                                          </Slider>
-                                          <Label fx:id="settingL1" text="Setting" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" />
-                                          <Label fx:id="settingL2" text="Setting" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="BOTTOM" />
-                                          <Slider fx:id="settingS2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="TOP">
-                                             <GridPane.margin>
-                                                <Insets left="10.0" right="10.0" />
-                                             </GridPane.margin>
-                                          </Slider>
-                                          <Label fx:id="settingL3" text="Setting" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="BOTTOM" />
-                                          <Label fx:id="settingL4" text="Setting" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="BOTTOM" />
-                                          <Slider fx:id="settingS3" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="TOP">
-                                             <GridPane.margin>
-                                                <Insets left="10.0" right="10.0" />
-                                             </GridPane.margin>
-                                          </Slider>
-                                          <Slider fx:id="settingS4" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="TOP">
-                                             <GridPane.margin>
-                                                <Insets left="10.0" right="10.0" />
-                                             </GridPane.margin>
-                                          </Slider>
-                                       </children>
                                     </GridPane>
                                  </content>
                               </Tab>
