--- a/src/main/resources/com/example/trafficsimulator/View/main-view.fxml
+++ b/src/main/resources/com/example/trafficsimulator/View/main-view.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
@@ -25,10 +24,9 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="400.0" minWidth="700.0" prefHeight="491.0" prefWidth="700.0" style="-fx-background-color: #666666;" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.trafficsimulator.Controller.MainController">
    <children>
-      <Accordion fx:id="menuAccordion" maxWidth="250.0" prefHeight="400.0" prefWidth="250.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <Accordion fx:id="menuAccordion" maxWidth="250.0" prefHeight="400.0" prefWidth="250.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
         <panes>
           <TitledPane fx:id="menuTP" animated="false" text="Menu">
             <content>
@@ -211,7 +209,7 @@
                                               <NumberAxis side="LEFT" />
                                             </yAxis>
                                           </LineChart>
-                                          <TextArea fx:id="graphTA" prefHeight="200.0" prefWidth="200.0" text="Current Traffic Flow:" GridPane.rowIndex="2">
+                                          <TextArea fx:id="graphTA" editable="false" prefHeight="200.0" prefWidth="200.0" text="Current Traffic Flow:" GridPane.rowIndex="2">
                                              <GridPane.margin>
                                                 <Insets />
                                              </GridPane.margin>
@@ -233,8 +231,7 @@
           </TitledPane>
         </panes>
       </Accordion>
-      <ScrollBar layoutX="679.0" layoutY="174.0" max="1000.0" min="-1000.0" orientation="VERTICAL" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <Accordion fx:id="selectedAccordion" layoutX="486.0" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="0.0">
+      <Accordion fx:id="selectedAccordion" layoutX="486.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <panes>
           <TitledPane fx:id="selectedTP" animated="false" text="Selected">
             <content>
@@ -317,7 +314,6 @@
           </TitledPane>
         </panes>
       </Accordion>
-      <ScrollBar layoutX="6.0" layoutY="470.0" max="1000.0" min="-1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
       <AnchorPane fx:id="anchorPane" prefHeight="491.0" prefWidth="700.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Rectangle fx:id="rect" arcHeight="5.0" arcWidth="5.0" fill="TRANSPARENT" height="1000.0" layoutX="222.0" layoutY="30.0" stroke="TRANSPARENT" strokeType="INSIDE" width="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
